welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = 
{
  var position = -1
  for (i<-1 to nums.length) 
  {
    if (nums(i-1)==lookingFor && position==-1) 
    {
      position = i-1
    }
  }
  return position
}